--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ form {
     justify-content: center;
 
     max-width: 450px;
-    width: 80%;
+    width: 100%;
     min-width: 300px;
 
     max-height: 600px;
@@ -71,3 +71,27 @@ a {
     color: #52aa53;
     text-decoration: none;
 }
+
+@media screen and (max-width:500px) {
+    form {
+        max-width: 400px;
+        width: 100%;
+        min-width: 300px;
+    }
+
+    #first-name, #last-name {
+        width: 120px;
+    }
+
+    #email, #password, #confirm-password, #button {
+        width: 270px;
+    }
+
+    #terms {
+        margin: 15px 10px;
+    }
+
+}
+
+
+
